--- a/_config.yml
+++ b/_config.yml
@@ -95,4 +95,4 @@ google_analytics_tracking_id:
 # Facebook Like
 facebook_like: false
 
-# duoshuo commentsduoshuo_comments: trueduoshuo_short_name: yourname
+# duoshuo commentsduoshuo_comments: trueduoshuo_short_name: starfelix
