--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.starfelix.com
+url: http://starFelix.github.io
 title: Binary Of Felix
 subtitle: A Binary World Of Felix
 author: Star Felix Jew
